2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/Makefile.am, ada_user/ada_user.texi, user/Makefile.am,
	user/c_user.texi, user/concepts.t, user/overview.t,
	user/preface.texi, user/schedule.t, user/sem.t: Add table of figures.
	Add text and graphic of tree illustrating valid combinations of
	semaphore attributes.
	* user/semaphore_attributes.eps, user/semaphore_attributes.png:
	New files.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/console.t: Capitalization.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/preface.texi: Remove UNIX and update port list.

2009-10-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* HELP.html, bsp_howto/support.t, relnotes/status.texi,
	started_ada/buildada.t: Remove references to posix/Unix port.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t, user/userext.t: Eliminate use of deprecated
	rtems_extension.

2009-09-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpu_supplement/arm.t: Update.
	* cpu_supplement/preface.texi: Typo.
	* cpu_supplement/general.t: Expanded abbreviation.

2009-09-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpu_supplement/arm.t: Update.
	* cpu_supplement/preface.texi: Typo.
	* cpu_supplement/general.t: Expanded abbreviation.

2009-08-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* user/conf.t: Change stack allocator signature.

2009-08-22	Roxana Leontie <roxana.leontie@gmail.com>

	* bsp_howto/framebuffer.t: documented the improvements made to
	read/write

2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* bsp_howto/framebuffer.t: Updated the frame buffer documentation.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Add configuration of posix message queue file
	descriptors as separate entity. Also add documentation on posix
	configuration elements not previously covered.

2009-08-03	Roxana Leontie <roxana.leontie@gmail.com>
